# myrtc

./: .gitignore  LICENSE  README.md
linux/c++/xrtcserver/xrtcserver/: CMakeLists.txt
linux/c++/xrtcserver/xrtcserver/conf/: general.yaml
linux/c++/xrtcserver/xrtcserver/src/: main.cpp  xrtcserver_def.h
linux/c++/xrtcserver/xrtcserver/src/base/: async_udp_socket.cpp  async_udp_socket.h  conf.cpp  conf.h  network.cpp  network.h  socket.cpp  socket.h
linux/c++/xrtcserver/xrtcserver/src/ice/: candidate.cpp  candidate.h  ice_agent.cpp  ice_agent.h  ice_connection.cpp  ice_connection.h  ice_controller.cpp  ice_controller.h  ice_credentials.cpp  ice_credentials.h  ice_def.cpp  ice_def.h  ice_transport_channel.cpp  ice_transport_channel.h  port_allocator.cpp  port_allocator.h  stun.cpp  stun.h  stun_request.cpp  stun_request.h  udp_port.cpp  udp_port.h
linux/c++/xrtcserver/xrtcserver/src/module/rtp_rtcp/: rtp_utils.cpp  rtp_utils.h
linux/c++/xrtcserver/xrtcserver/src/pc/: codec_info.h  dtls_srtp_transport.cpp  dtls_srtp_transport.h  dtls_transport.cpp  dtls_transport.h  peer_connection.cpp  peer_connection.h  peer_connection_def.h  session_description.cpp  session_description.h  srtp_session.cpp  srtp_session.h  srtp_transport.cpp  srtp_transport.h  stream_params.cpp  stream_params.h  transport_controller.cpp  transport_controller.h
linux/c++/xrtcserver/xrtcserver/src/server/: rtc_server.cpp  rtc_server.h  rtc_worker.cpp  rtc_worker.h  signaling_worker.cpp  signaling_worker.h  tcp_connection.cpp
linux/c++/xrtcserver/xrtcserver/src/stream/: pull_stream.cpp  pull_stream.h  push_stream.cpp  push_stream.h  rtc_stream.cpp  rtc_stream.h  rtc_stream_manager.cpp  rtc_stream_manager.h
windows/WebrtcFFmpegRecord/: WebrtcFFmpegRecord.sln  WebrtcFFmpegRecord.vcxproj  main.cpp
windows/xrtcsdk/xrtc-third_party/: CMakeLists.txt
windows/xrtcsdk/xrtc-third_party/curl-7.81.0/: CMakeLists.txt
windows/xrtcsdk/xrtc-third_party/libice/: CMakeLists.txt  README.md  build.sh
windows/xrtcsdk/xrtc-third_party/libice/ice/: candidate.cpp  ice_agent.cpp  ice_agent.h  ice_connection.cpp  ice_controller.cpp  ice_credentials.cpp  ice_def.cpp  ice_transport_channel.cpp  port_allocator.cpp  port_allocator.h  stun.cpp  stun.h  stun_request.cpp  udp_port.cpp  udp_port.h
windows/xrtcsdk/xrtc-third_party/libice/ice/base/: network.cpp
windows/xrtcsdk/xrtc-third_party/libice/ice/base/linux/: async_udp_socket.cpp  event_loop.cpp  event_loop.h  physical_socket_ex.h
windows/xrtcsdk/xrtc-third_party/libice/ice/dtls/: certificate.cpp  dtls_srtp_transport.cpp  dtls_srtp_transport.h  dtls_transport_channel.cpp  rtp_utils.cpp  rtp_utils.h  srtp_session.cpp  srtp_transport.cpp
windows/xrtcsdk/xrtc-third_party/libyuv/: CMakeLists.txt
windows/xrtcsdk/xrtc-third_party/opus-1.3.1/: CMakeLists.txt
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/include/ice/: candidate.h  ice_connection.h  ice_connection_info.h  ice_controller.h  ice_credentials.h  ice_def.h  ice_transport_channel.h  stun_request.h
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/include/ice/base/: network.h
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/include/ice/base/linux/: async_udp_socket.h
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/include/ice/dtls/: certificate.h  dtls_transport_channel.h  srtp_session.h  srtp_transport.h
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/lib/cmake/CURL/: CURLTargets.cmake
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/lib/cmake/Opus/: OpusTargets-debug.cmake  OpusTargets.cmake
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/lib/cmake/absl/: abslTargets-debug.cmake  abslTargets.cmake
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/lib/cmake/xrtc-third_party/: xrtc-third_partyConfig.cmake  xrtc-third_partyTargets-debug.cmake  xrtc-third_partyTargets.cmake
windows/xrtcsdk/xrtc-third_party/out1/install/x64-Debug/Windows/lib/pkgconfig/: absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_debugging.pc  absl_debugging_internal.pc  absl_demangle_internal.pc  absl_dynamic_annotations.pc  absl_endian.pc  absl_errno_saver.pc  absl_examine_stack.pc  (+102 more)
(+253 files in other folders)
